# novel-proofreader

./: .eslintignore  .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  keystore-base64.txt  my-release-key.jks  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: android.yml  build.yml  linux.yml  macos.yml  windows.yml
.trae/rules/: git-commit-message.md
src/: App.css  App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AIContinuation.tsx  CJKVariantsModal.tsx  ChapterNav.tsx  CharacterSettings.tsx  ConfigModal.tsx  EmptyState.tsx  ErrorBoundary.tsx  GlobalSearch.tsx  HomePage.tsx  Icons.tsx  IgnoredWordsManager.tsx  NovelEventModal.tsx  NovelList.tsx  ProofreadPanel.tsx  ProofreadQueuePanel.tsx  ReaderPanel.tsx  ReadingSettingsPanel.tsx  RelationshipGraph.tsx  ScriptRenderer.tsx  Select.tsx  TaskPanel.tsx  Toast.tsx  WordReplacementModal.tsx
src/hooks/: useAICheck.ts  useAppUpdate.ts  useChapterTitleSuggestion.ts  useFileImport.ts  useMobile.ts  useReadingProgress.ts  useScriptTask.ts  useSearch.ts  useSwipeGesture.ts  useTTS.ts
src/stores/: aiConfigStore.ts  appMetaStore.ts  appStore.ts  characterStore.ts  configStore.ts  novelStore.ts  proofreadMetaStore.ts  proofreadStore.ts  uiStore.ts  wordReplacementStore.ts
src/types/: index.ts
src/utils/: aiClient.ts  androidService.ts  chapterSplit.ts  decodeText.ts  errorHandler.ts  fileExport.ts  (+13 more)
(+10 files in other folders)
